--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,6 +73,7 @@
 
     <!-- Activity's title -->
     <string name="title_activity_main">사만원</string>
+    <string name="title_activity_current_game">오늘 게임</string>
     <string name="title_activity_current_game_new_game">새 게임</string>
     <string name="title_activity_current_game_modify_game_setting">게임 설정 수정</string>
     <string name="title_activity_add_result">결과추가</string>
@@ -96,7 +97,6 @@
     <string name="menu_reset">결과 초기화</string>
     <string name="menu_delete">삭제</string>
     <string name="menu_settings">설정</string>
-    <string name="menu_about">사만원 1.1.10에 대하여</string>
 
     <!-- Dialog -->
     <string name="dialog_reset">결과 초기화</string>
@@ -115,7 +115,6 @@
     <string name="dialog_please_insert_name">이름을 입력하세요</string>
 
     <!-- MainActivity -->
-    <string name="activity_main_title">사만원</string>
     <string name="activity_main_fragment_current_game_summary">점수표</string>
     <string name="activity_main_fragment_current_game_hole_result">홀별 기록</string>
     <string name="activity_main_fragment_attend_count">최근 3개월</string>
@@ -125,6 +124,10 @@
     <string name="activity_main_netshare_upload_fail">내보내기를 실패했습니다</string>
     <string name="activity_main_netshare_import_success">가져오기를 완료했습니다</string>
     <string name="activity_main_netshare_import_fail">가져오기를 실패했습니다</string>
+    
+    
+    <!-- Current Game Activity -->
+    <string name="activity_currentgame_title">오늘 게임</string>
 
     <!-- New Game Activity -->
     <string name="activity_new_game_page_title_game_setting">게임 설정</string>
@@ -327,6 +330,9 @@
     <string name="preference_auto_upload_key">AutoUpload</string>
     <string name="preference_auto_upload_title">자동 업로드</string>
     <string name="preference_auto_upload_summary">결과를 서버로 자동으로 업로드합니다</string>
+    <string name="preference_auto_download_key">AutoDownload</string>
+    <string name="preference_auto_download_title">자동 다운로드</string>
+    <string name="preference_auto_download_summary">앱이 시작될 때 결과를 서버로부터 자동으로 가져옵니다</string>
     
     <!-- GameReceiveTask -->
     <string name="task_gamereceive_connecting">접속 중</string>
